# django-stepik-tours

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml
stepiktours/: asgi.py  settings.py  urls.py  wsgi.py
tours/: context_processors.py  tours_data.py  urls.py  views.py
tours/templates/tours/: base.html  departure.html  index.html  nav.html  tour.html
